RESOLVED FIXED27477
Incorrect assertion in Vector::remove
https://bugs.webkit.org/show_bug.cgi?id=27477
Summary Incorrect assertion in Vector::remove
Jessie Berlin
Reported 2009-07-20 18:52:46 PDT
inline void Vector<T, inlineCapacity>::remove(size_t position, size_t length) { ASSERT(position < size()); ASSERT(position + length < size()); T* beginSpot = begin() + position; .... Should be: inline void Vector<T, inlineCapacity>::remove(size_t position, size_t length) { ASSERT(position < size()); ASSERT(position + length <= size()); T* beginSpot = begin() + position; ....
Attachments
Patch that makes the assertion check for <= instead of just <. (1.31 KB, patch)
2009-07-20 19:36 PDT, Jessie Berlin
levin: review+
Jessie Berlin
Comment 1 2009-07-20 19:36:52 PDT
Created attachment 33137 [details] Patch that makes the assertion check for <= instead of just <.
Jessie Berlin
Comment 2 2009-07-20 20:10:03 PDT
commited with revision 46147
Note You need to log in before you can comment on or make changes to this bug.