2009-07-20  Jessie Berlin  <jberlin@apple.com>

Fix an incorrect assertion in Vector::remove.

        Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=27477

        * wtf/Vector.h:
        (WTF::::remove):
        Assert that the position at which to start removing elements + the
        length (the number of elements to remove) is less than or equal to the
        size of the entire Vector.

Canonical link: https://commits.webkit.org/37764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46147 268f45cc-cd09-0410-ab3c-d52691b4dbfc